# valve-bsp-parser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  valve-bsp-parser.sln  valve-bsp-parser.vcxproj  valve-bsp-parser.vcxproj.filters
.backup/include/valve-bsp-parser/: bsp_parser.hpp
ValveBSP/: BSPFile.cpp  BSPFile.hpp  BSPFlags.hpp  BSPParser.cpp  BSPParser.hpp  BSPStructure.hpp  Matrix.hpp  TraceRay.cpp  TraceRay.hpp
example/: example.sln  example.vcxproj  example.vcxproj.filters  main.cpp
include/mkrn/core/: requirements.hpp
include/mkrn/math/: matrix.hpp
include/mkrn/valve/bsp/: bsp_parser.hpp
include/mkrn/valve/bsp/file-format/: color_rgb_exp32.hpp  compressed_light_cube.hpp  constants.hpp  cplane.hpp  dbrush.hpp  dbrushside.hpp  dedge.hpp  dface.hpp  dheader.hpp  dleaf.hpp  dnode.hpp  dplane.hpp  entity.hpp  lump.hpp  lzma.hpp  polygon.hpp  snode.hpp  texinfo.hpp  trace.hpp  valve_structs.hpp  vertex.hpp  vplane.hpp
include/valve-bsp-parser/: bsp_parser.hpp
include/valve-bsp-parser/core/: matrix.hpp  requirements.hpp  valve_structs.hpp
src/: bsp_parser.cpp
src/valve/: bsp_parser.cpp
